--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Endangered Frogs</title>
+    <title>My first Website</title>
 </head>
 <body>
 
-  <h1>This is a heading</h1>
-  <p>This is a paragraph.</p>
+  <h1>Rare Types of Frogs</h1>
+  <p>
+    <ol>
+        <li>Macaya breast-Spot</li>
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.haititrust.org%2Fmacaya&psig=AOvVaw3Mmo3s5gEizf63IHvMPt6z&ust=1602100283314000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPiQmuXeoOwCFQAAAAAdAAAAABAb" width="200 px" height="200 px">
+        
+            <ul>
+                <li>Status: Critically Endagered</li>
+                <li>Found: Southwestern Haiti</li>
+                <li>Why it is rare: Habitat Destruction</li>
+            </ul>     
+        <Island Forest Frog</li>
+        <li>Golden Mantella</li>
+        <li>Titicaca Waterfrog</li>
+    </ol>
+  </p>
 
 </body>
 </html>
