--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li>Status: Critically Endagered</li>
                 <li>Found: Southwestern Haiti</li>
-                <li>Why it is rare: Habitat Destruction</li>
+                <li>Why it's rare: Habitat Destruction</li>
             </ul>     
         <Island Forest Frog</li>
         <li>Golden Mantella</li>
