--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <h1>Rare Types of Frogs</h1>
   <p>
     <ol>
-        <li>Macaya breast-Spot</li>
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.haititrust.org%2Fmacaya&psig=AOvVaw3Mmo3s5gEizf63IHvMPt6z&ust=1602100283314000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPiQmuXeoOwCFQAAAAAdAAAAABAb" width="200px" height="200px">
+        <li><h2>Macaya breast-Spot</h2></li>
+          <img src=https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.haititrust.org%2Fmacaya&psig=AOvVaw3Mmo3s5gEizf63IHvMPt6z&ust=1602100283314000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPiQmuXeoOwCFQAAAAAdAAAAABAb" width="300px" height="300px">
             <ul>
                 <li>Status: Critically Endagered</li>
                 <li>Found: Southwestern Haiti</li>
                 <li>Why it's rare: Habitat Destruction</li>
             </ul>     
-        <Island Forest Frog</li>
-        <li>Golden Mantella</li>
-        <li>Titicaca Waterfrog</li>
+        <li><h2>Island Forest Frog</h2></li>
+        <li><h2>Golden Mantella</h2></li>
+        <li><h2>Titicaca Waterfrog</h2></li>
     </ol>
   </p>
 
