--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>
     <ol>
         <li><h2>Macaya breast-Spot</h2></li>
-          <img src=https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.haititrust.org%2Fmacaya&psig=AOvVaw1LY6x_nRjTXxj3cfJkWDee&ust=1602118901549000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIC56pGkoewCFQAAAAAdAAAAABAI" width="300px" height="300px">
+          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.haititrust.org%2Fmacaya&psig=AOvVaw1LY6x_nRjTXxj3cfJkWDee&ust=1602118901549000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIC56pGkoewCFQAAAAAdAAAAABAI" width="300px" height="300px">
             <ul>
                 <li>Status: Critically Endagered</li>
                 <li>Found: Southwestern Haiti</li>
