--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <p>
     <ol>
         <li><h2>Macaya breast-Spot</h2></li>
-          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pbs.org%2Fwnet%2Fnature%2Ffabulous-frogs-the-worlds-most-endangered-frogs%2F8917%2F&psig=AOvVaw1LY6x_nRjTXxj3cfJkWDee&ust=1602118901549000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIC56pGkoewCFQAAAAAdAAAAABAa" width="300px" height="300px">
+          <img src="https://www.haititrust.org/img/m-thumb-3.jpg" width="300px" height="300px">
             <ul>
                 <li>Status: Critically Endagered</li>
                 <li>Found: Southwestern Haiti</li>
                 <li>Why it's rare: Habitat Destruction</li>
             </ul>     
         <li><h2>Island Forest Frog</h2></li>
-           <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pbs.org%2Fwnet%2Fnature%2Ffabulous-frogs-the-worlds-most-endangered-frogs%2F8917%2F&psig=AOvVaw16ExAae89f0irRfduSTg14&ust=1602119747110000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJCO5aWnoewCFQAAAAAdAAAAABAK" width="300px" height="300px">
+           <img src="https://www.pbs.org/wnet/nature/files/2014/06/platymantis_insulatus_original.jpg" width="300px" height="300px">
             <ul>
                  <li>Status:Critically Endangered</li>
                  <li>Found: Central Philppines</li>
