--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
                  <li>Why it's rare: Agriculture and Logging</li>
             </ul>
         <li><h2>Golden Mantella</h2></li>
+        <img src="https://animals.sandiegozoo.org/sites/default/files/2016-10/animals_hero_mantella.jpg" width="500px" height="300px">
+        <ul>
+            <li>Status: Critically Endagered</li>
+            <li>Found: Central-East Madagascar</li>
+            <li>Why it's rare: Agriculture and logging</li>
+        </ul>
         <li><h2>Titicaca Waterfrog</h2></li>
+         <ul>
+             <li>Status: Critically Endangered</li>
+             <li>Found: Andes Mountain Range</li>
+             <li>Why it's rare: Over-harvesting, enviornmental pollution</li>
+         </ul>
     </ol>
   </p>
 
