--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <li>Status: Critically Endagered</li>
                 <li>Found: Southwestern Haiti</li>
                 <li>Why it's rare: Habitat Destruction</li>
+                <li><a href="https://en.wikipedia.org/wiki/Eleutherodactylus_thorectes">
+                    Click me to learn more!
+                    </a>
             </ul>     
         <li><h2>Island Forest Frog</h2></li>
            <img src="https://www.pbs.org/wnet/nature/files/2014/06/platymantis_insulatus_original.jpg" width="500px" height="300px">
