--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
                     </a>
          </ul>
     </ol>
+    <table border="1">
+        <tr>
+            <th>Common Name</th>
+            <th>Scientific Name</th>
+            <th>Family</th>
+        </tr>
+        <tr>
+            <td>Macaya breast-spot</td>
+            <td>Island Forest Frog</td>
+            <td>Golden Mantella</td>
+            <td>Titicaca Water Frog</td>
+        </tr>
+    </table>
+     
   </p>
 
 </body>
