--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <title>My first Website</title>
+    <style>
+            {body
+                background-color: Thistle;
+        }
 </head>
 <body>
 
