--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>My first Website</title>
     <style>
-            {body
+            body{
                 background-color: Thistle;
         }
     </style>
