--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My first Website</title>
     <style>
             body{
-                background-color: Thistle;
+                background-color: MediumTurquoise;
         }
     </style>
 </head>
