--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
             body{
                 background-color: MediumTurquoise;
         }
+        h1{
+            color:MidnightBlue
+        }
     </style>
 </head>
 <body>
