--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         h1{
             color:MidnightBlue
         }
+        h2{
+            color:MidnightBlue
+        }
+        li{
+            color:MidnightBlue
+        }
     </style>
 </head>
 <body>
