--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
         }
         h1{
             color:MidnightBlue
+            font-family: Timesnewroman
         }
         h2{
-            color:MidnightBlue
-        }
-        li{
             color:MidnightBlue
         }
     </style>
