--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         }
         h1{
             color:MidnightBlue
-            font-family: Timesnewroman
         }
         h2{
             color:MidnightBlue
@@ -69,9 +68,13 @@
         </tr>
         <tr>
             <td>Macaya breast-spot</td>
+            <td>Eleutherodactylus thorectes</td>
+            <td>Eleutherodactylidae</td>
+        </tr>
+        <tr>
             <td>Island Forest Frog</td>
-            <td>Golden Mantella</td>
-            <td>Titicaca Water Frog</td>
+            <td>Platymantis insulata</td>
+            <td>Ranidae</td>
         </tr>
     </table>
      
