--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </a>
          </ul>
     </ol>
-    <table border="1">
+    <table border="2">
         <tr>
             <th>Common Name</th>
             <th>Scientific Name</th>
@@ -75,6 +75,16 @@
             <td>Island Forest Frog</td>
             <td>Platymantis insulata</td>
             <td>Ranidae</td>
+        </tr>
+        <tr>
+            <td>Golden Mantella</td>
+            <td>Mantella aurantiaca</td>
+            <td>Mantellidae</td>
+        </tr>
+        <tr>
+            <td>Titicaca Water Frog</td>
+            <td>Telmatobius culeus</td>
+            <td>Telmatobiinae</td>
         </tr>
     </table>
      
