--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <style>
             body{
                 background-color: MediumTurquoise;
+                text-align: center;
         }
         h1{
             color:MidnightBlue
         }
         h2{
+            color:MidnightBlue
+        }
+        tr{
             color:MidnightBlue
         }
     </style>
