--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         tr{
             color:MidnightBlue
         }
+        ol{
+            text-align:center;
+        }
     </style>
 </head>
 <body>
