--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><b>Found</b>: Southwestern Haiti</li>
                 <li><b>Why it's rare</b>: Habitat Destruction</li>
                 <li><a href="https://en.wikipedia.org/wiki/Eleutherodactylus_thorectes">
-                    Click me to learn more!
+                    Click Here to learn more!
                     </a>
             </ul>     
         <li><h2>Island Forest Frog</h2></li>
@@ -39,7 +39,7 @@
                 <li><b>Found</b>: Central Philppines</li>
                 <li><b>Why it's rare</b>: Agriculture and Logging</li>
                 <li><a href="https://en.wikipedia.org/wiki/Island_forest_frog">
-                    Click me to learn more!
+                    Click Here to learn more!
                     </a>
             </ul>
         <li><h2>Golden Mantella Frog</h2></li>
@@ -49,7 +49,7 @@
             <li><b>Found</b>: Central-East Madagascar</li>
             <li><b>Why it's rare</b>: Agriculture and logging</li>
             <li><a href="https://en.wikipedia.org/wiki/Golden_mantella">
-                    Click me to learn more!
+                    Click Here to learn more!
                     </a>
         </ul>
         <li><h2>Titicaca Water frog</h2></li>
@@ -59,11 +59,13 @@
              <li><b>Found</b>: Andes Mountain Range</li>
              <li><b>Why it's rare</b>: Over-harvesting, enviornmental pollution</li>
              <li><a href="https://en.wikipedia.org/wiki/Telmatobius_culeus">
-                    Click me to learn more!
+                    Click Here to learn more!
                     </a>
          </ul>
     </ol>
-    <table border="2">
+    <br>
+    <h2>Classification</h2>
+    <table border="3">
         <tr>
             <th>Common Name</th>
             <th>Scientific Name</th>
