--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><b>Found</b>: Southwestern Haiti</li>
                 <li><b>Why it's rare</b>: Habitat Destruction</li>
                 <li><a href="https://en.wikipedia.org/wiki/Eleutherodactylus_thorectes">
-                    Click Here to learn more!
+                    <i>Click Here to learn more!</i>
                     </a>
             </ul>     
         <li><h2>Island Forest Frog</h2></li>
