--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><b>Found</b>: Central Philppines</li>
                 <li><b>Why it's rare</b>: Agriculture and Logging</li>
                 <li><a href="https://en.wikipedia.org/wiki/Island_forest_frog">
-                    Click Here to learn more!
+                    <i>Click Here to learn more!</i>
                     </a>
             </ul>
         <li><h2>Golden Mantella Frog</h2></li>
@@ -49,7 +49,7 @@
             <li><b>Found</b>: Central-East Madagascar</li>
             <li><b>Why it's rare</b>: Agriculture and logging</li>
             <li><a href="https://en.wikipedia.org/wiki/Golden_mantella">
-                    Click Here to learn more!
+                <i>Click Here to learn more!</i>
                     </a>
         </ul>
         <li><h2>Titicaca Water frog</h2></li>
@@ -59,7 +59,7 @@
              <li><b>Found</b>: Andes Mountain Range</li>
              <li><b>Why it's rare</b>: Over-harvesting, enviornmental pollution</li>
              <li><a href="https://en.wikipedia.org/wiki/Telmatobius_culeus">
-                    Click Here to learn more!
+                 <i>Click Here to learn more!</i>
                     </a>
          </ul>
     </ol>
