--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </ol>
     <br>
     <h2>Classification</h2>
-    <table border="3">
+    <table border="3" align="right">
         <tr>
             <th>Common Name</th>
             <th>Scientific Name</th>
