--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         tr{
             color:MidnightBlue
         }
+        h3{
+            text-align:Right
+        }
     </style>
 </head>
 <body>
@@ -64,7 +67,7 @@
          </ul>
     </ol>
     <br>
-    <h2>Classification</h2>
+    <h3>Classification</h2>
     <table border="3" align="right">
         <tr>
             <th>Common Name</th>
