--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
         tr{
             color:MidnightBlue
         }
-        h3{
-            text-align:Right
-        }
     </style>
 </head>
 <body>
@@ -67,8 +64,8 @@
          </ul>
     </ol>
     <br>
-    <h3>Classification</h2>
-    <table border="3" align="right">
+    <h2>Classification</h2>
+    <table border="3">
         <tr>
             <th>Common Name</th>
             <th>Scientific Name</th>
