--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-  <h1 style="background-color:AliceBlue;">Rare Types of Frogs</h1>
+  <h1 style="background-color:Lightblue;">Rare Types of Frogs</h1>
   <p>
     <ol>
         <li><h2>Macaya breast-Spot Frog</h2></li>
