--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
         tr{
             color:MidnightBlue
         }
+        h4{
+            color:MidnightBlue
+        }
     </style>
 </head>
 <body>
 
   <h1 style="background-color:AliceBlue;">Rare Types of Frogs</h1>
-    <h3>By Grace Ascher</h3>
+    <h4><i>By Grace Ascher<i></h4>
   <p>
     <ol>
         <li><h2>Macaya breast-Spot Frog</h2></li>
