--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <h1 style="background-color:AliceBlue;">Rare Types of Frogs</h1>
-    <h4><i>By Grace Ascher<i></h4>
+    <h4>By Grace Ascher</h4>
   <p>
     <ol>
         <li><h2>Macaya breast-Spot Frog</h2></li>
