--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
          </ul>
     </ol>
     <br>
-    <h2>Classification</h2>
+    <h2>Classification Table</h2>
     <table border="3">
         <tr>
             <th>Common Name</th>
