--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-  <h1 style="background-color:AliceBlue;">Rare Types of Frogs</h1>
+  <h1 style="background-color:rgb(230, 243, 255);">Rare Types of Frogs</h1>
     <h4>By Grace Ascher</h4>
   <p>
     <ol>
