--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <p>
     <ol>
         <li><h2>Macaya breast-Spot Frog</h2></li>
-          <img src="https://www.haititrust.org/img/m-thumb-3.jpg" width="500px" height="300px">
+          <a href=https://en.wikipedia.org/wiki/Eleutherodactylus_thorectes><img src="https://www.haititrust.org/img/m-thumb-3.jpg" width="500px" height="300px"></a>
             <ul>
                 <li><b>Status</b>: Critically Endagered</li>
                 <li><b>Found</b>: Southwestern Haiti</li>
                 <li><b>Why it's rare</b>: Habitat Destruction</li>
                 <li><a href="https://en.wikipedia.org/wiki/Eleutherodactylus_thorectes">
-                    <i>Click Here to learn more!</i>
+                    <i>Click Here or on the image to learn more!</i>
                     </a>
             </ul>     
         <li><h2>Island Forest Frog</h2></li>
